--- a/cmiuc.yaml
+++ b/cmiuc.yaml
@@ -720,184 +720,184 @@ proxies:
   password: "1"
   name: 🦊 RedFox 124
 - type: "socks5"
-  server: "103.112.52.181"
-  port: "10888"
-  username: "123"
-  password: "321"
+  server: "43.224.116.21"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 125
 - type: "socks5"
-  server: "103.112.52.214"
-  port: "10888"
-  username: "123"
-  password: "321"
+  server: "43.224.116.25"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 126
 - type: "socks5"
-  server: "103.112.53.118"
-  port: "10888"
-  username: "123"
-  password: "321"
+  server: "43.224.116.29"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 127
 - type: "socks5"
-  server: "103.112.53.160"
-  port: "10888"
-  username: "123"
-  password: "321"
+  server: "43.224.116.30"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 128
 - type: "socks5"
-  server: "103.120.203.67"
-  port: "10888"
-  username: "123"
-  password: "321"
+  server: "43.224.116.110"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 129
 - type: "socks5"
-  server: "103.122.142.17"
-  port: "10888"
-  username: "123"
-  password: "321"
+  server: "43.224.116.121"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 130
 - type: "socks5"
-  server: "103.122.142.122"
-  port: "10888"
-  username: "123"
-  password: "321"
+  server: "43.224.116.165"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 131
 - type: "socks5"
-  server: "103.122.142.130"
-  port: "19568"
-  username: "123"
-  password: "321"
+  server: "43.224.118.34"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 132
 - type: "socks5"
-  server: "103.122.142.131"
-  port: "19568"
-  username: "123"
-  password: "321"
+  server: "43.225.148.234"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 133
 - type: "socks5"
-  server: "103.147.162.69"
-  port: "19568"
-  username: "123"
-  password: "321"
+  server: "43.225.150.234"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 134
 - type: "socks5"
-  server: "103.147.162.99"
-  port: "10888"
-  username: "123"
-  password: "321"
+  server: "103.4.145.230"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 135
 - type: "socks5"
-  server: "103.147.162.151"
-  port: "19568"
-  username: "123"
-  password: "321"
+  server: "103.4.146.233"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 136
 - type: "socks5"
-  server: "103.147.162.153"
-  port: "19568"
-  username: "123"
-  password: "321"
+  server: "103.4.147.181"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 137
 - type: "socks5"
-  server: "103.147.162.164"
-  port: "19568"
-  username: "123"
-  password: "321"
+  server: "103.4.147.183"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 138
 - type: "socks5"
-  server: "103.147.162.179"
-  port: "19568"
-  username: "123"
-  password: "321"
+  server: "103.4.147.193"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 139
 - type: "socks5"
-  server: "103.147.162.182"
-  port: "19568"
-  username: "123"
-  password: "321"
+  server: "103.4.147.250"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 140
 - type: "socks5"
-  server: "103.147.162.183"
-  port: "19568"
-  username: "123"
-  password: "321"
+  server: "103.141.106.33"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 141
 - type: "socks5"
-  server: "103.147.163.0"
-  port: "19568"
-  username: "123"
-  password: "321"
+  server: "103.141.106.73"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 142
 - type: "socks5"
-  server: "103.147.163.98"
-  port: "10888"
-  username: "123"
-  password: "321"
+  server: "103.230.62.102"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 143
 - type: "socks5"
-  server: "103.159.128.220"
-  port: "19568"
-  username: "123"
-  password: "321"
+  server: "103.230.62.105"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 144
 - type: "socks5"
-  server: "103.159.129.21"
-  port: "10888"
-  username: "123"
-  password: "321"
+  server: "103.230.63.202"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 145
 - type: "socks5"
-  server: "103.159.129.77"
-  port: "19568"
-  username: "123"
-  password: "321"
+  server: "103.230.63.204"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 146
 - type: "socks5"
-  server: "103.205.37.86"
-  port: "10888"
-  username: "123"
-  password: "321"
+  server: "103.230.63.206"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 147
 - type: "socks5"
-  server: "103.218.27.226"
-  port: "10888"
-  username: "123"
-  password: "321"
+  server: "103.245.204.90"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 148
 - type: "socks5"
-  server: "103.231.238.214"
-  port: "10888"
-  username: "123"
-  password: "321"
+  server: "103.245.204.91"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 149
 - type: "socks5"
-  server: "103.239.252.82"
-  port: "19568"
-  username: "123"
-  password: "321"
+  server: "103.245.204.92"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 150
 - type: "socks5"
-  server: "103.239.252.120"
-  port: "10888"
-  username: "123"
-  password: "321"
+  server: "103.245.205.17"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 151
 - type: "socks5"
-  server: "103.239.253.51"
-  port: "19568"
-  username: "123"
-  password: "321"
+  server: "103.245.205.19"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 152
 - type: "socks5"
-  server: "103.239.254.252"
-  port: "10888"
-  username: "123"
-  password: "321"
+  server: "103.245.205.121"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 153
 - type: "socks5"
-  server: "114.129.15.131"
-  port: "19568"
-  username: "123"
-  password: "321"
+  server: "103.245.206.22"
+  port: "1052"
+  username: "ras"
+  password: "ras"
   name: 🦊 RedFox 154
 - type: "socks5"
   server: "118.179.202.238"
@@ -971,3 +971,195 @@ proxies:
   username: "ras"
   password: "ras"
   name: 🦊 RedFox 166
+- type: "socks5"
+  server: "103.245.206.173"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 167
+- type: "socks5"
+  server: "103.245.206.175"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 168
+- type: "socks5"
+  server: "103.250.68.129"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 169
+- type: "socks5"
+  server: "103.250.69.42"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 170
+- type: "socks5"
+  server: "103.250.69.174"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 171
+- type: "socks5"
+  server: "103.250.69.226"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 172
+- type: "socks5"
+  server: "103.250.70.213"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 173
+- type: "socks5"
+  server: "103.250.70.214"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 174
+- type: "socks5"
+  server: "116.68.195.50"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 175
+- type: "socks5"
+  server: "116.68.196.110"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 176
+- type: "socks5"
+  server: "116.68.196.153"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 177
+- type: "socks5"
+  server: "119.148.2.185"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 178
+- type: "socks5"
+  server: "119.148.7.237"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 179
+- type: "socks5"
+  server: "119.148.7.238"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 180
+- type: "socks5"
+  server: "119.148.10.61"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 181
+- type: "socks5"
+  server: "119.148.16.93"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 182
+- type: "socks5"
+  server: "119.148.29.19"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 183
+- type: "socks5"
+  server: "119.148.30.133"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 184
+- type: "socks5"
+  server: "119.148.31.185"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 185
+- type: "socks5"
+  server: "119.148.31.190"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 186
+- type: "socks5"
+  server: "119.148.37.198"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 187
+- type: "socks5"
+  server: "119.148.45.181"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 188
+- type: "socks5"
+  server: "119.148.45.182"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 189
+- type: "socks5"
+  server: "119.148.46.177"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 190
+- type: "socks5"
+  server: "119.148.52.240"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 191
+- type: "socks5"
+  server: "119.148.52.241"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 192
+- type: "socks5"
+  server: "119.148.52.242"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 193
+- type: "socks5"
+  server: "119.148.52.243"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 194
+- type: "socks5"
+  server: "119.148.54.246"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 195
+- type: "socks5"
+  server: "202.53.168.253"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 196
+- type: "socks5"
+  server: "202.53.168.254"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 197
+- type: "socks5"
+  server: "202.53.169.170"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 198
