--- a/cmiuc.yaml
+++ b/cmiuc.yaml
@@ -1163,3 +1163,357 @@ proxies:
   username: "ras"
   password: "ras"
   name: 🦊 RedFox 198
+- type: "socks5"
+  server: "103.35.108.6"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 199
+- type: "socks5"
+  server: "103.35.108.41"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 200
+- type: "socks5"
+  server: "103.35.108.145"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 201
+- type: "socks5"
+  server: "103.35.108.198"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 202
+- type: "socks5"
+  server: "103.35.108.206"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 203
+- type: "socks5"
+  server: "103.35.109.138"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 204
+- type: "socks5"
+  server: "103.35.109.142"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 205
+- type: "socks5"
+  server: "103.35.109.209"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 206
+- type: "socks5"
+  server: "103.35.110.49"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 207
+- type: "socks5"
+  server: "103.35.110.62"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 208
+- type: "socks5"
+  server: "103.35.110.93"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 209
+- type: "socks5"
+  server: "103.35.110.161"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 210
+- type: "socks5"
+  server: "103.35.111.101"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 211
+- type: "socks5"
+  server: "202.40.178.97"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 212
+- type: "socks5"
+  server: "202.40.178.181"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 213
+- type: "socks5"
+  server: "202.40.178.237"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 214
+- type: "socks5"
+  server: "202.40.180.21"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 215
+- type: "socks5"
+  server: "202.40.180.94"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 216
+- type: "socks5"
+  server: "202.40.180.98"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 217
+- type: "socks5"
+  server: "202.40.180.101"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 218
+- type: "socks5"
+  server: "202.40.180.121"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 219
+- type: "socks5"
+  server: "202.40.180.177"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 220
+- type: "socks5"
+  server: "202.40.181.49"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 221
+- type: "socks5"
+  server: "202.40.181.110"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 222
+- type: "socks5"
+  server: "202.40.182.65"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 223
+- type: "socks5"
+  server: "202.40.182.165"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 224
+- type: "socks5"
+  server: "202.40.183.2"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 225
+- type: "socks5"
+  server: "202.40.183.8"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 226
+- type: "socks5"
+  server: "202.40.183.9"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 227
+- type: "socks5"
+  server: "202.40.183.10"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 228
+- type: "socks5"
+  server: "202.40.183.11"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 229
+- type: "socks5"
+  server: "202.40.183.58"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 230
+- type: "socks5"
+  server: "202.40.183.62"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 231
+- type: "socks5"
+  server: "202.40.184.65"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 232
+- type: "socks5"
+  server: "202.40.184.73"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 233
+- type: "socks5"
+  server: "202.40.184.174"
+  port: "1080"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 234
+- type: "socks5"
+  server: "202.40.186.157"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 235
+- type: "socks5"
+  server: "202.40.186.177"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 236
+- type: "socks5"
+  server: "202.40.186.186"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 237
+- type: "socks5"
+  server: "202.40.186.190"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 238
+- type: "socks5"
+  server: "202.40.186.193"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 239
+- type: "socks5"
+  server: "202.40.186.194"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 240
+- type: "socks5"
+  server: "202.40.187.217"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 241
+- type: "socks5"
+  server: "202.40.188.98"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 242
+- type: "socks5"
+  server: "202.40.188.102"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 243
+- type: "socks5"
+  server: "202.40.188.201"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 244
+- type: "socks5"
+  server: "202.40.189.110"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 245
+- type: "socks5"
+  server: "202.40.190.130"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 246
+- type: "socks5"
+  server: "202.40.190.134"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 247
+- type: "socks5"
+  server: "202.40.190.185"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 248
+- type: "socks5"
+  server: "202.40.190.205"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 249
+- type: "socks5"
+  server: "202.40.191.141"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 250
+- type: "socks5"
+  server: "202.40.191.189"
+  port: "1088"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 251
+- type: "socks5"
+  server: "103.35.110.13"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 252
+- type: "socks5"
+  server: "103.35.111.13"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 253
+- type: "socks5"
+  server: "103.35.110.102"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 254
+- type: "socks5"
+  server: "103.35.109.105"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 255
+- type: "socks5"
+  server: "103.35.109.173"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 256
+- type: "socks5"
+  server: "103.35.109.57"
+  port: "1052"
+  username: "ras"
+  password: "ras"
+  name: 🦊 RedFox 257
